# des-finder-project

./: .editorconfig  .gitignore  README.md  presentation.odp
report/: .gitignore  project_report.bib  project_report.tex
src/common/: common.c  common.h  defines.h  log.h  stopwatch.c  stopwatch.h
src/dictionary-generator/: main.c  meson.build
src/parallel/: main.c  meson.build  processor.c  processor.h  queue.c  queue.h  structs.h
src/sequential/: main.c  meson.build
src/test/: .gitignore  test.sh
